# training

./: .gitignore  CMakeLists.txt
SumParallel/: main.cpp
TaskManager/: Task.h  TaskManager.cpp  TaskManager.h  blockingQueue.h  main.cpp  worker.cpp  worker.h
WebServer/: main.cpp  webServer.cpp  webServer.h
